fix(mobile issue alignment): mobile alignment issue if more contacts have been added

--- a/src/app/modules/cardlist/cardlist.component.scss
+++ b/src/app/modules/cardlist/cardlist.component.scss
@@ -65,13 +65,5 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', end
   }
   
 
-  @media only screen and (max-width: 600px) {
-
-    .list-group {
-      overflow-y: scroll !important;
-        max-height: 70vh !important;
-        -webkit-overflow-scrolling: touch;
-    }
-
- }
+  
   
